<resources>
    <string name="app_name" translatable="false">Simple Notes</string>
    <string name="button_text_note_1">Note #1</string>
    <string name="button_text_note_2" translatable="false">Note #2</string>
    <string name="button_text_note_3" translatable="false">Note #3</string>
    <string name="textView_text_description" translatable="false">Description of the note</string>
    <string name="editText_hint">Some text</string>
    <string name="button_text_note_4">Note #4</string>
    <string name="button_text_note_5">Note #5</string>
    <string name="navigation_drawer_open">Navigation open </string>
    <string name="navigation_drawer_close">Navigation close</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="navigation_header">Navigation header</string>
    <string-array name="notes">
        <item>Duis aute irure dolor in reprehenderit in voluptate,
        quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni
        dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est,
        ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus
        asperiores repellat.</item>
        <item>Duis aute irure dolor in reprehenderit in voluptate,
        quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni
        dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est,
        ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus
        asperiores repellat.</item>
        <item>Duis aute irure dolor in reprehenderit in voluptate,
        quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni
        dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est,
        ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus
        asperiores repellat.</item>
        <item>Temporibus autem quibusdam et aut officiis debitis aut rerum
        necessitatibus saepe eveniet, unde omnis iste natus error sit voluptatem accusantium
        doloremque laudantium, totam rem aperiam eaque ipsa, velit esse cillum dolore eu fugiat
        nulla pariatur.</item>
        <item> Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
        nisi. Nam eget dui. Etiam rhoncus.</item>
        <item>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet
        adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit
        id, lorem. </item>
    </string-array>
</resources>